[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "locust>=2.43.4",
    "pytest>=9.0.3",
    "pytest-aiohttp>=1.1.0",
    "websockets>=16.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
